# docs/swagger.json
@@ -15,6 +15,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "clients"
+                ],
                 "summary": "Get all clients",
                 "responses": {
                     "200": {
@@ -35,6 +38,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "clients"
                 ],
                 "summary": "Create a new client",
                 "parameters": [
@@ -70,6 +76,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "clients"
+                ],
                 "summary": "Get a client by ID",
                 "parameters": [
                     {
@@ -102,6 +111,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "clients"
                 ],
                 "summary": "Update a client by ID",
                 "parameters": [
@@ -142,6 +154,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "clients"
+                ],
                 "summary": "Delete a client by ID",
                 "parameters": [
                     {
@@ -173,6 +188,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "contracts"
                 ],
                 "summary": "Create a new contract",
                 "parameters": [
@@ -214,6 +232,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "contracts"
+                ],
                 "summary": "Get a contract by ID",
                 "parameters": [
                     {
@@ -252,6 +273,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "contracts"
                 ],
                 "summary": "Update a contract by ID",
                 "parameters": [
@@ -298,6 +322,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "contracts"
+                ],
                 "summary": "Delete a contract by ID",
                 "parameters": [
                     {
@@ -335,6 +362,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "objects"
                 ],
                 "summary": "Create a new object",
                 "parameters": [
@@ -375,6 +405,9 @@
                 "description": "Get a list of objects by object ID",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "objects"
                 ],
                 "summary": "Get objects by object ID",
                 "parameters": [
@@ -417,6 +450,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "objects"
                 ],
                 "summary": "Update an object by ID",
                 "parameters": [
@@ -462,6 +498,9 @@
                 "description": "Delete an object by its ID",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "objects"
                 ],
                 "summary": "Delete an object by ID",
                 "parameters": [
